# livelihood-support

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SETUP.md  app_case_record.py  claude_desktop_config.sample.json  docker-compose.keycloak.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  setup_schema.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
api/: __init__.py  dependencies.py  main.py  schemas.py
api/routes/: __init__.py  recipients.py  records.py
docs/: AUTHENTICATION.md  DEPLOYMENT.md  INFRASTRUCTURE.md  KEYCLOAK_USER_MANAGEMENT.md  Manifesto_LivelihoodSupport_Graph.md  OPERATIONS_GUIDE.md  SERVER_SETUP.md  SPECIFICATION.md  TASKS.md  TECHNICAL_STANDARDS.md
keycloak/: realm-export.json
lib/: __init__.py  ai_extractor.py  anonymizer.py  audit.py  auth.py  db_connection.py  db_operations.py  db_queries.py  file_readers.py  money_management.py  utils.py  validation.py
mcp/: server.py
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/dashboards/: api-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: alerts.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf  ssl.conf.example
scripts/: backup.sh  deploy.sh  generate_ssl_certs.sh  import_users.sh  logrotate.conf  restore.sh  run_e2e_tests.sh  setup_scheduled_backup.sh  users_sample.csv
scripts/keycloak/: livelihood-support-realm.json  setup-realm.sh
tests/: __init__.py  conftest.py  test_ai_extractor.py  test_anonymizer.py  test_api.py  test_api_auth.py  test_audit.py  test_auth.py  test_db_connection.py  test_db_operations.py  test_db_queries.py  test_dependencies.py  test_file_readers.py  test_mcp_server.py  test_security_owasp.py  test_utils.py  test_validation.py
tests/e2e/: __init__.py  conftest.py  test_api_e2e.py  test_streamlit_e2e.py  test_workflows_e2e.py
